--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body{
     text-align: center;
 }
+
+.choice-button{
+    height: 100px;
+    width: 100px;
+    border: none;
+    margin:10px;
+    background-color: rgb(248, 246, 246);
+    border-radius: 2rem;
+    cursor: pointer;
+}
+
+.choice-image{
+    height:75px;
+   
+}
